Initial work on FloorPlan revamp

--- a/RTFP.csproj
+++ b/RTFP.csproj
@@ -47,13 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataStructures\Geometry\Edge.cs" />
+    <Compile Include="DataStructures\Geometry\Vertex.cs" />
     <Compile Include="Generator\Constraints\Constraint.cs" />
     <Compile Include="Generator\Constraints\ConstraintSet.cs" />
     <Compile Include="Generator\Constraints\MinMax.cs" />
     <Compile Include="Generator\FloorPlan\FloorPlanGenerator.cs" />
     <Compile Include="Generator\FloorPlan\FloorPlan.cs" />
-    <Compile Include="Generator\FloorPlan\Room.cs" />
-    <Compile Include="DataStructures\GenericTree.cs" />
+    <Compile Include="Generator\FloorPlan\RoomNode.cs" />
     <Compile Include="DataStructures\SquarifiedTreeMap.cs" />
     <Compile Include="Generator\Generator.cs" />
     <Compile Include="Generator\FloorPlan\SuburbanGenerator.cs" />
