--- a/RTFP.csproj
+++ b/RTFP.csproj
@@ -47,8 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithms\MST\Prims.cs" />
     <Compile Include="DataStructures\Geometry\Edge.cs" />
     <Compile Include="DataStructures\Geometry\Vertex.cs" />
+    <Compile Include="DataStructures\Graph.cs" />
     <Compile Include="Generator\Constraints\Constraint.cs" />
     <Compile Include="Generator\Constraints\ConstraintSet.cs" />
     <Compile Include="Generator\Constraints\MinMax.cs" />
